force-app/main/default/objects/ShowTicket__c/ShowTicket__c.object-meta.xml
<CustomObject>
    <label>ShowTicket</label>
    <nameField>
        <displayFormat>TID-{0000}</displayFormat>
        <label>ShowTicket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ShowTickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>