force-app/main/default/objects/ShowTicket__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Admin Full Course</fullName>
            </value>
            <value>
                <fullName>Salesforce App Builder Full Course</fullName>
            </value>
            <value>
                <fullName>Salesforce Advanced Admin Full Course</fullName>
            </value>
            <value>
                <fullName>Salesforce PD1 Full Course</fullName>
            </value>
            <value>
                <fullName>Salesforce PD2 Full Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>