force-app/main/default/objects/ShowTicket__c/fields/SeatNumber__c.field-meta.xml
<CustomField>
    <fullName>SeatNumber__c</fullName>
    <displayFormat>SEAT-{000}</displayFormat>
    <label>SeatNumber</label>
    <type>AutoNumber</type>
</CustomField>