force-app/main/default/objects/ShowTicket__c/fields/ShowSlot__c.field-meta.xml
<CustomField>
    <fullName>ShowSlot__c</fullName>
    <label>ShowSlot</label>
    <type>DateTime</type>
</CustomField>